<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/LightGoldenrodYellow"
    tools:context=".InsertProduct">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="380dp"
            android:layout_height="match_parent"
            android:background="@drawable/title_style"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="30dp"
            android:padding="4dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/neues_produkt_hinzufuegen"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="22sp"
                android:padding="4dp"
                android:text="@string/produktname"/>

            <EditText
                android:id="@+id/eTpName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:hint="@string/produktbezeichnung"
                android:importantForAutofill="no" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="22sp"
                android:padding="4dp"
                android:text="@string/produkt_beschreibung"/>


            <EditText
                android:id="@+id/eTpDesc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:hint="@string/was_ist_drinn"
                android:padding="4dp"
                android:importantForAutofill="no" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="22sp"
                android:padding="4dp"
                android:text="@string/packungsgroesse"/>

            <EditText
                android:id="@+id/eTpSize"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:hint="@string/wie_viel_ist_drinn"
                android:padding="4dp"
                android:importantForAutofill="no" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">


            <TextView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="22sp"
                android:padding="4dp"
                android:text="@string/menge"/>

            <EditText
                android:id="@+id/eTpAmount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:padding="4dp"
                android:hint="@string/wie_viel_packungen"
                android:importantForAutofill="no" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="22sp"
                android:padding="4dp"
                android:text="@string/ort"/>

            <Spinner
                android:id="@+id/spLocation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style_home"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:text="@string/speichern"
            android:padding="6dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="40dp">
        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>

</ScrollView>