<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:background="@color/WhiteSmoke">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvBezeichnung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:maxLines="1"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/produktbezeichnung"
            android:textColor="@color/black">
        </TextView>

        <TextView
            android:id="@+id/tVpSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tvPackAmount"
            android:layout_marginStart="10dp"
            android:text="@string/a"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:maxLines="1">
        </TextView>

        <TextView
            android:id="@+id/tvUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tVpSize"
            android:text="@string/unit"
            android:textSize="14sp"
            android:layout_marginStart="5dp"
            android:textColor="@color/black"
            android:maxLines="1">
        </TextView>


        <TextView
            android:id="@+id/tvPackAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tvBezeichnung"
            android:layout_marginStart="15dp"
            android:text="@string/stueck"
            android:textColor="@color/black"
            android:textSize="14sp">
        </TextView>

    </RelativeLayout>

</androidx.cardview.widget.CardView>