<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:backgroundTint="@color/LightGoldenrodYellow">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_new"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="50dp"
        android:textColor="@color/White"
        android:background="@drawable/button_style_home"
        android:layout_marginRight="50dp"
        android:drawableEnd="@drawable/new_food"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/neu" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_kuehlschrank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_new"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:textStyle="bold"
        android:layout_marginBottom="25dp"
        android:background="@drawable/button_style_home"
        android:drawableEnd="@drawable/ic_kuehlschrank"
        android:padding="10dp"
        android:text="@string/kuehlschrank"
        android:textColor="@color/White"
        android:textSize="20sp"
        tools:visibility="visible" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_tiefkuehler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:background="@drawable/button_style_home"
        android:textColor="@color/White"
        android:padding="10dp"
        android:layout_below="@id/button_kuehlschrank"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="25dp"
        android:text="@string/tiefkuehler"
        android:drawableEnd="@drawable/freezer_icon" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_speis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:background="@drawable/button_style_home"
        android:textColor="@color/White"
        android:padding="10dp"
        android:layout_below="@id/button_tiefkuehler"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="25dp"
        android:text="@string/speis"
        android:drawableEnd="@drawable/ic_pantryy" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_vorratsschrank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="10dp"
        android:textColor="@color/White"
        android:background="@drawable/button_style_home"
        android:layout_below="@id/button_speis"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="25dp"
        android:text="@string/vorratsschrank"
        android:drawableEnd="@drawable/ic_vorratskastl" />

</RelativeLayout>